# Embroidermodder

./: .gitignore  .travis.yml  Makefile  Raw offset flag with outline.csv.1  Ready to convert rotated flag.csv.1  Ready to convert rotated flag.csv.3  Rebel Aliance.vp3  Rebel.csv  Rebel2.csv  Test Aliance.vp3  convert-roundabout.py  convert.sh  drawing.csv  line.csv
arj-3.10.22/: arj.h  c_defs.h  decode.c  decode.rs  environ.h  externs.h
libembroidery-convert-rs/: Cargo.toml
libembroidery-rs/: Cargo.toml
libembroidery-rust/: Cargo.toml  README.md  build.rs  libembroidery-rust  libembroidery-rust.pri  libembroidery-rust.pro  migrate.py
libembroidery-rust/c-src/: emb-file.h  main.c  test.h
libembroidery-rust/src/: lib.rs  utils.rs
libembroidery-rust/src/ar_compress/: read.rs
libembroidery-rust/src/error/: macros.rs  mod.rs
libembroidery-rust/src/formats/: mod.rs  reader_writer.rs
libembroidery-rust/src/formats/husqvarna/compress/: compress.rs  constants.rs  data.rs  decompress.rs  mod.rs
libembroidery-rust/src/helpers/: binary.rs  hash.rs  misc.rs  mod.rs  time.rs
libembroidery-rust/src/pattern/: arc.rs  circle.rs  ellipse.rs  line.rs  mod.rs  path.rs  pattern.rs  point.rs  polygon.rs  polyline.rs  rect.rs  settings.rs  spline.rs  stitch.rs
libembroidery-rust/src/pattern/utils/: color.rs  flag.rs  hoop.rs  mod.rs  thread.rs  vector.rs
libembroidery-sys/: Cargo.toml  build.rs  wrapper.h
libembroidery-test/: libembroidery-test-hus-compress.c  libembroidery-test-hus-compress.h  libembroidery-test-main.c  libembroidery-test.pro  test-utils.h
(+83 files in other folders)
